--- a/Project/Project/Project.vcxproj
+++ b/Project/Project/Project.vcxproj
@@ -158,6 +158,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Input.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="OrbitingPlanet.cpp" />
     <ClCompile Include="OrbitSimulation.cpp" />
@@ -166,11 +167,13 @@
     <ClCompile Include="Projectile.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Input.hpp" />
     <ClInclude Include="OrbitingPlanet.hpp" />
     <ClInclude Include="OrbitSimulation.hpp" />
     <ClInclude Include="Planet.hpp" />
     <ClInclude Include="PlanetSystem.hpp" />
     <ClInclude Include="Projectile.hpp" />
+    <ClInclude Include="Singleton.hpp" />
     <ClInclude Include="SystemInformation.hpp" />
     <ClInclude Include="Vector2.hpp" />
   </ItemGroup>
