--- a/Project/Project/Project.vcxproj
+++ b/Project/Project/Project.vcxproj
@@ -158,6 +158,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="FPS_Counter.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="OrbitingPlanet.cpp" />
@@ -166,8 +167,10 @@
     <ClCompile Include="PlanetSystem.cpp" />
     <ClCompile Include="Projectile.cpp" />
     <ClCompile Include="ProjectileFactory.cpp" />
+    <ClCompile Include="Rocket.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="FPS_Counter.hpp" />
     <ClInclude Include="Input.hpp" />
     <ClInclude Include="OrbitingPlanet.hpp" />
     <ClInclude Include="OrbitSimulation.hpp" />
@@ -175,6 +178,7 @@
     <ClInclude Include="PlanetSystem.hpp" />
     <ClInclude Include="Projectile.hpp" />
     <ClInclude Include="ProjectileFactory.hpp" />
+    <ClInclude Include="Rocket.hpp" />
     <ClInclude Include="Singleton.hpp" />
     <ClInclude Include="SystemInformation.hpp" />
     <ClInclude Include="Vector2.hpp" />
