--- a/Project/Project/Project.vcxproj
+++ b/Project/Project/Project.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="Projectile.cpp" />
     <ClCompile Include="ProjectileFactory.cpp" />
     <ClCompile Include="Rocket.cpp" />
+    <ClCompile Include="RocketFactory.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FPS_Counter.hpp" />
@@ -179,6 +180,7 @@
     <ClInclude Include="Projectile.hpp" />
     <ClInclude Include="ProjectileFactory.hpp" />
     <ClInclude Include="Rocket.hpp" />
+    <ClInclude Include="RocketFactory.hpp" />
     <ClInclude Include="Singleton.hpp" />
     <ClInclude Include="SystemInformation.hpp" />
     <ClInclude Include="Vector2.hpp" />
