--- a/Project/Project/Project.vcxproj
+++ b/Project/Project/Project.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="Projectile.cpp" />
     <ClCompile Include="ProjectileFactory.cpp" />
     <ClCompile Include="Rocket.cpp" />
+    <ClCompile Include="ViewHandler.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FPS_Counter.hpp" />
@@ -182,6 +183,7 @@
     <ClInclude Include="Singleton.hpp" />
     <ClInclude Include="SystemInformation.hpp" />
     <ClInclude Include="Vector2.hpp" />
+    <ClInclude Include="ViewHandler.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
